deployment/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'alternative.ebdfbc2ec9.app.daiteap.com' ) {
        return 302 https://alternative.platform.alternative-project.eu$request_uri;
      }
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: cluster-issuer-letsencrypt
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 7200s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 7200s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 7200s
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/websocket-services: proxy-public
    nginx.org/client-max-body-size: 1024m
    nginx.org/websocket-services: proxy-public
  name: redirect-ckan
  namespace: alternative
spec:
  rules:
  - host: alternative.ebdfbc2ec9.app.daiteap.com
    http:
      paths:
      - backend:
          service:
            name: ckan
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: keycloak
            port:
              number: 80
        path: /auth/
        pathType: Prefix
  tls:
  - hosts:
    - alternative.ebdfbc2ec9.app.daiteap.com
    secretName: ckan-old-tls
